Use a JRE component for JWT Base64 decoding